refactor(core):更换jdk17新特性