@@ -35,7 +35,7 @@ public class AuthorityConfig {
      */
     public Boolean check(String... permissions) {
         // 获取当前用户的所有权限
-        List<String> roleList = CsSecurityHelper.getCurrentUser().getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList());
+        List<String> roleList = CsSecurityHelper.getCurrentUser().getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
         // 判断当前用户的所有权限是否包含接口上定义的权限
         return roleList.contains("admin") || Arrays.stream(permissions).anyMatch(roleList::contains);
     }
